# vpfs-iroh

./: .gitignore  Cargo.toml
src/: daemon.rs  file_system.rs  lib.rs  messages.rs  protocol.rs  remote_communication.rs  state.rs
src/applications/: cat.rs  cat2.rs  sh.rs
