[package]
name = "vpfs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
iroh = "0.95.1"
lru = "0.16.3"
n0-future = "0.3.1"
rand = "0.9.2"
serde = "1.0.228"
serde_bare = "0.5.0"
tokio = "1.49.0"

[[bin]]
name="daemon"
path="src/daemon.rs"

[[bin]]
name="sh"
path="src/applications/sh.rs"